objects/Focused_Support_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Desk__c</fullName>
        <label>Assigned Desk</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SME Desk</fullName>
                    <default>true</default>
                    <label>SME Desk</label>
                </value>
                <value>
                    <fullName>IT Desk</fullName>
                </value>
                <value>
                    <fullName>Super User Desk</fullName>
                    <isActive>false</isActive>
                    <label>Super User Desk</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Focused_Support_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Coding</fullName>
                </value>
                <value>
                    <fullName>Benefit Design</fullName>
                </value>
                <value>
                    <fullName>Benefit Testing</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>BlueRewards</fullName>
                </value>
                <value>
                    <fullName>CareFirst Systems</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Davis</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>EDC/Setup</fullName>
                </value>
                <value>
                    <fullName>Employer Portal</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Facets Systems</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Group Structure</fullName>
                </value>
                <value>
                    <fullName>ID Card</fullName>
                </value>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>MyAccount</fullName>
                </value>
                <value>
                    <fullName>NASCO Systems</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle Renewal</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Pre-Sale</fullName>
                </value>
                <value>
                    <fullName>Rates</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Detailed description of the issue being faced</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ETC_Date_Time_Tracker__c</fullName>
        <description>Ticket Resolution Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Date to Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Subject</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SME or IT Desk user or Super user who received the information from affected user and opened the ticket</inlineHelpText>
        <label>Opened By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defect_Opened_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lightning Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Affected business user who is facing the issue</inlineHelpText>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reported_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Provided__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution Provided</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Category__c</fullName>
        <label>Root Cause Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access Rights Issue</fullName>
                </value>
                <value>
                    <fullName>Admin Task</fullName>
                </value>
                <value>
                    <fullName>Coding Issue</fullName>
                </value>
                <value>
                    <fullName>COTS Issue</fullName>
                </value>
                <value>
                    <fullName>Could not Duplicate</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Design Issue</fullName>
                </value>
                <value>
                    <fullName>Documentation Issue</fullName>
                </value>
                <value>
                    <fullName>Environment Issue</fullName>
                </value>
                <value>
                    <fullName>Integration Issue</fullName>
                </value>
                <value>
                    <fullName>Invalid/Incorrect Test Case</fullName>
                </value>
                <value>
                    <fullName>Migration Data Issue</fullName>
                </value>
                <value>
                    <fullName>Missed in Training</fullName>
                </value>
                <value>
                    <fullName>Missed QA Test</fullName>
                </value>
                <value>
                    <fullName>Missed Unit Test</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Requirements Issue</fullName>
                </value>
                <value>
                    <fullName>Third Party Tool Issue</fullName>
                </value>
                <value>
                    <fullName>Version Conflict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Cause_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Analysis in Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Information</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Custom object created by AIA team, for tracking defects raised by users during production checkout or warranty support</description>
    <label>Focused Support Tracker</label>
    <nameField>
        <displayFormat>Ticket-{0000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Focused Support Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Tickets_wtwoeut</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Category__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Description__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Opened_By__c</columns>
        <columns>Assigned_Desk__c</columns>
        <columns>Email_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IMPACT</fullName>
        <columns>Email_Subject__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Opened_By__c</columns>
        <columns>Assigned_Desk__c</columns>
        <columns>Root_Cause_Detail__c</columns>
        <columns>Root_Cause_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>greaterThan</operation>
            <value>Ticket-0333</value>
        </filters>
        <label>IMPACT</label>
    </listViews>
    <listViews>
        <fullName>Unresolved</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Category__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Description__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Opened_By__c</columns>
        <columns>Assigned_Desk__c</columns>
        <columns>ETC_Date_Time_Tracker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Invalid,Duplicate</value>
        </filters>
        <filters>
            <field>Assigned_Desk__c</field>
            <operation>equals</operation>
            <value>SME Desk</value>
        </filters>
        <label>Unresolved - SME Desk</label>
    </listViews>
    <listViews>
        <fullName>Unresolved_IT_Desk</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Category__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Description__c</columns>
        <columns>Reported_By__c</columns>
        <columns>Opened_By__c</columns>
        <columns>Assigned_Desk__c</columns>
        <columns>ETC_Date_Time_Tracker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Invalid,Duplicate</value>
        </filters>
        <filters>
            <field>Assigned_Desk__c</field>
            <operation>equals</operation>
            <value>IT Desk</value>
        </filters>
        <label>Unresolved - IT Desk</label>
    </listViews>
</CustomObject>